sumo/tests/duarouter/errors/network/edge/lane/root__edge__lane#length__ungiven21/errors.duarouter
Error: Attribute 'length' is missing in definition of lane '2_0'.
Quitting (on error).
